--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<a href="{{ site.baseurl }}/games">Games</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
+
 <article class="page">
   
   <h1>{{ page.title }}</h1>
